# crewAI

./: README.md
crewAI/: README.md  ReadME_pre.md
crewAI/src/deepseek/: crew.py  llm.py  main.py  output.md  report.md
crewAI/src/deepseek/config/: agents.yaml  tasks.yaml
deepseek/: builder_output.md  pyproject.toml  resarcher_output.md  scrapper_output.md
deepseek/knowledge/: user_preference.txt
deepseek/outputs/: builder_output.md  charts.json  ppt_payload.json  report.pptx  resarcher_output.md  scrapper_output.md  slide_build_log.md  summary.md  ~$report.pptx
deepseek/src/deepseek/: crew.py  llm.py  main.py
deepseek/src/deepseek/config/: agents.yaml  tasks.yaml
