[project]
name = "deepseek"
version = "0.1.0"
description = "deepseek using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
deepseek = "deepseek.main:run"
run_crew = "deepseek.main:run"
train = "deepseek.main:train"
replay = "deepseek.main:replay"
test = "deepseek.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
